[package]
name = "pg_lease"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/danthegoodman1/pg_lease"
license = "MIT"
description = "Postgres lease management package for running a single looping function while a lease is held"
documentation = "https://docs.rs/pg_lease"
readme = "../README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.1"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "chrono",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.45.1", features = ["full"] }
